# AlertaEnchente

./: AlertaEnchente.c  CMakeLists.txt  readme.md
include/: buzzer.h  display.h  global_data.h  global_manage.h  init_config.h  joystick.h  processamento.h  ssd1306.h
libs/: buzzer.c  display.c  global_manage.c  init_config.c  joystick.c  processamento.c  ssd1306.c
